# expert-alf-toolkit

./: .env.example  .gitignore  .ruff.toml  CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh  금칙 설정 작성 지침.md
.claude/: settings.json
.claude/skills/: README.md
agent-sops/: CLAUDE.md  README.md  stage1-clustering.sop.md  stage2-extraction.sop.md  stage3-sop-generation.sop.md  stage4-flowchart-generation.sop.md  userchat-to-sop-pipeline.sop.md
examples/sample-run-r-20260413-example/: config_snapshot.json  scenarios.json  transcripts.jsonl
lang/: ko.yaml
prompts/: generate_client_report.md  generate_scenarios.md  judge_scenario.md  normalize_sop.md  persona_archetypes.md
rules/: agent-sop-format.md
scripts/: README.md  analyze_bots.py  analyze_dialogs.py  config.py  enrich_patterns.py  extract_alf_setup_data.py  generate_heatmap.py  generate_sales_report.py  lang_config.py  pipeline.py  upload_documents.py
scripts/clustering/: CLAUDE.md  README.md  __init__.py  clustering.py  data_loader.py  embeddings.py  output.py  tagging.py  text_enhancer.py
templates/: ALF_PACKAGE_template.md  ALF_RULES_DRAFT_template.md  ALF_VALUE_PROPOSITION_template.html  API_REQUIREMENTS_template.md  AUTOMATION_ANALYSIS_template.md  CLAUDE.md  FLOWCHART_template.md  HT_template.md  QA_SCENARIOS_template.md  RAG_ITEMS_template.md  README.md  SALES_REPORT_template.md  TASK_template.md  TS_template.md  최종 분석 리포트 템플릿.md
tools/: chat_driver.py  cli.py  explore.py  result_store.py  scenario_runner.py  scoring_agent.py
(+27 files in other folders)
