[project]
name = "alf-qa-agent"
version = "0.1.0"
description = "QA automation toolkit for ALF (Channel.io AI Agent). Provides Python I/O tools and Claude Skills for scenario-based conversation testing and scoring."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "playwright>=1.48.0",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "python-json-logger>=3.3.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.8.6",
]
